--- a/src/pages/App.css
+++ b/src/pages/App.css
@@ -61,12 +61,13 @@
   font-size: 20px;
   background-color: #9F03FF3D;
   border-color: #CA74FF;
-  border-radius: 100%; 
+  border-radius: 50%; 
   cursor: pointer;
   transition: background-color 0.3s ease, transform 0.2s ease;
   margin-top: 20px;
   box-shadow: 0 4px 32px #d1afaf40;
-
+  width: 150px;
+  height: 150px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -80,7 +81,7 @@
 
 .Score,
 .Level {
-  font-size: 104px;
+  font-size: 24px;
   margin-top: 20px;
   color: #FFFFFF;
   font-family: sans-serif;
