--- a/src/pages/App.css
+++ b/src/pages/App.css
@@ -66,7 +66,8 @@ body {
 
 .Small-block {
   background-color: #ffffff; /* Белый фон */
-  padding: 20px;
+  font-size: 14px;
+  padding: 10px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   width: 48%; /* Ширина каждого блока */
@@ -83,6 +84,22 @@ body {
   color: #00dccf;
 }
 
+.score__smallBlock {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.score__smallBlock {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.score__div {
+  padding-top: 5px;
+}
+
 .Click-button {
   position: relative;
   padding: 0px;
@@ -93,7 +110,7 @@ body {
   cursor: pointer;
   transition: background-color 0.3s ease, transform 0.2s ease;
   margin-top: 20px;
-  box-shadow: 0 4px 32px #ca74ffac;
+  box-shadow: 0 4px 60px #ca74ffac;
   width: 300px;
   height: 300px;
   display: flex;
@@ -114,8 +131,8 @@ body {
 
 .Score,
 .Level {
-  font-size: 24px;
-  margin-top: 20px;
+  font-size: 16px;
+  margin-top: 10px;
   color: #ffffff;
   font-family: sans-serif;
 }
@@ -222,5 +239,6 @@ body {
   width: auto;
 }
 
-.main-vector {
+.coin__Style {
+  padding-top: 3px;
 }
