--- a/src/styles/Merch.css
+++ b/src/styles/Merch.css
@@ -1,23 +1,41 @@
+@font-face {
+  font-family: "TT Firs Neue";
+  src: url("../font/TTFirsNeue-DemiBold.eot");
+  src: local("TT Firs Neue DemiBold"), local("TTFirsNeue-DemiBold"),
+    url("../font/TTFirsNeue-DemiBold.eot?#iefix") format("embedded-opentype"),
+    url("../font/TTFirsNeue-DemiBold.woff2") format("woff2"),
+    url("../font/TTFirsNeue-DemiBold.woff") format("woff"),
+    url("../font/TTFirsNeue-DemiBold.ttf") format("truetype");
+  font-weight: 600;
+  font-style: normal;
+}
+
 .merch-container {
   max-width: 800px;
   margin: 0 auto;
+  font-family: "TT Firs Neue";
 }
 
 .merch-wrapper {
   display: flex;
   flex-wrap: wrap;
-  gap: 35px;
+  gap: 30px;
 }
 
 .merch-block {
+  font-size: 14px;
   background-color: #ffffff;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   width: 173px;
-  height: 119px;
   text-align: center;
   background-color: #282b30;
   border-color: #2d2f35;
+  font-family: "TT Firs Neue";
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 8px 3px;
 }
 
 @media only screen and (max-width: 600px) {
@@ -25,4 +43,42 @@
     flex: auto;
     width: 28%;
   }
+}
+
+.text_main {
+  font-size: 14px;
+  font-family: "TT Firs Neue";
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 4px;
+  width: 100%;
+  padding-bottom: 10px;
+}
+
+.text_main > span {
+  text-align: left;
+  width: calc(50% - 10px);
+  font-size: 10px;
+}
+
+.merch_img {
+  width: calc(50% - 10px);
+  height: auto;
+}
+
+.main_img {
+  width: 22px;
+  height: auto;
+}
+
+.text_footer {
+  padding-top: 10px;
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  border-top: 2px solid #363940;
+  width: 100%;
+  justify-content: center;
+  text-align: center;
 }
