--- a/src/styles/FriendsPage.css
+++ b/src/styles/FriendsPage.css
@@ -1,1 +1,124 @@
+@font-face {
+  font-family: "TT Firs Neue";
+  src: url("../font/TTFirsNeue-DemiBold.eot");
+  src: local("TT Firs Neue DemiBold"), local("TTFirsNeue-DemiBold"),
+    url("../font/TTFirsNeue-DemiBold.eot?#iefix") format("embedded-opentype"),
+    url("../font/TTFirsNeue-DemiBold.woff2") format("woff2"),
+    url("../font/TTFirsNeue-DemiBold.woff") format("woff"),
+    url("../font/TTFirsNeue-DemiBold.ttf") format("truetype");
+  font-weight: 600;
+  font-style: normal;
+}
 
+body {
+  margin: 0;
+  font-family: "TT Firs Neue";
+  background-color: #000;
+  color: #fff;
+}
+.container {
+  padding: 20px;
+}
+.header {
+  text-align: center;
+}
+.header h1 {
+  font-size: 31px;
+  margin: 0;
+}
+.header p {
+  font-size: 14px;
+  margin: 25px 0 38px 0;
+}
+
+.smalls__icons {
+  width: 15px !important;
+  height: 15px !important;
+}
+
+.invite-card {
+  display: flex;
+  align-items: center;
+  text-align: left;
+  background-color: #333;
+  border-radius: 10px;
+  padding: 15px;
+  margin-bottom: 20px;
+}
+
+.invite-card img {
+  width: 40px;
+  height: 40px;
+  margin-right: 15px;
+}
+
+.invite-card span {
+  color: #ffb823;
+}
+
+.invite-card div {
+  flex: 1;
+}
+.invite-card h2 {
+  font-size: 14px;
+  margin: 0;
+}
+.invite-card p {
+  font-size: 14px;
+  margin: 5px 0 0;
+}
+.more-bonuses {
+  text-align: center;
+  font-size: 20px;
+  margin: 25px 0;
+  color: #8500c9;
+}
+.friends-list {
+  font-family: "TT Firs Neue";
+  margin-bottom: 20px;
+}
+.friends-list h2 {
+  font-family: "TT Firs Neue";
+  font-size: 16px;
+  text-align: left;
+  margin: 20px 0 10px 0;
+}
+.friends-list p {
+  font-family: "TT Firs Neue";
+  background-color: #333;
+  font-size: 14px;
+  color: #77797c;
+  border-radius: 10px;
+  padding: 39px;
+  text-align: center;
+}
+.invite-buttons {
+  font-family: "TT Firs Neue";
+  display: flex;
+  gap: 10px;
+  margin-bottom: 20px;
+}
+
+.button1 {
+  font-family: "TT Firs Neue";
+  flex: 1;
+  padding: 23px;
+  width: 282px;
+  background-color: #007bff;
+  border: none;
+  border-radius: 10px;
+  color: #fff;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.button2 {
+  flex: 1;
+  padding: 15px;
+  background-color: #007bff;
+  border: none;
+  border-radius: 10px;
+  color: #fff;
+  font-size: 16px;
+  cursor: pointer;
+}
